fix: account components have padding on small screens widths

--- a/client/src/pages/MyAccount/MyAccount.css
+++ b/client/src/pages/MyAccount/MyAccount.css
@@ -7,7 +7,7 @@
 
 .my-account-container {
   position: relative;
-  width: 100%;
+  width: 90%;
   max-width: 400px;
 }
 
